# drone_data_collect

./: pyproject.toml  readme.md
drone_data_collect/: config.toml  hooks.py  main.py  plugin_crazyflie.py
