[tool.poetry]
name = "drone_data_collect"
version = "0.1.0"
description = ""
authors = ["CofinCup <864341840@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
pluggy = "^1.0.0"
loguru = "^0.6.0"
cflib = "^0.1.20"
toml = "^0.10.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
